# miplanner

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
miplanner/: __init__.py  __main__.py  models.py
miplanner/backend/: metrics.py  planner.py  repository.py  server.py
miplanner/frontend/templates/: base.html  index.html  project.html
projects/: sample.yaml  test.yaml
