[project]
name = "miplanner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.129.0",
    "jinja2>=3.1.6",
    "pre-commit>=4.5.1",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0.3",
    "uvicorn>=0.41.0",
]
